# P1_CS4277_4377

./: .gitignore  command.txt  compile.ps1  input  invoke.ps1  make-llvm-ir.ps1  make_input_controlflow_hijack_instrumented.py  make_input_good.py  make_input_large_overflow.py  make_input_medium_overflow.py  make_input_offbyone.py  make_input_pattern.py  make_input_small_overflow.py  make_input_touch_return.py  plug.ps1  readme.md  run_test.py
Test_branches/: Test_branches.cpp
Test_loop/: Test_loop.cpp  input
Test_memcpy/: Test_memcpy.cpp  input
Test_memmove/: Test_memmove.cpp
Test_printCanary/: Test_printCanary.cpp
Test_sprintf/: Test_sprintf.cpp
Test_strcpy/: Test_strcpy.c  input
Test_strncpy/: Test_strncpy.cpp  input
pass/: CMakeLists.txt
pass/include/: InstrumentFunctions.h
pass/lib/: CMakeLists.txt  InstrumentFunctions.cpp
